# stark101-rust

./: README.md
stark101/: Cargo.toml
stark101/proofs/: proof.json
stark101/src/: channel.rs  finite_fields.rs  fri.rs  lib.rs  main.rs  merkle.rs  part1.rs  part2.rs  part3.rs  part4.rs  polynomials.rs  utils.rs
stark101/src/common/: channel.rs  finite_fields.rs  fri.rs  merkle.rs  mod.rs  polynomials.rs
stark101/src/prover/: mod.rs  part1.rs  part2.rs  part3.rs  part4.rs
stark101/src/verifier/: mod.rs
stark101/tests/: channel_tests.rs  finite_field_tests.rs  fri_tests.rs  merkle_tests.rs  polynomials_tests.rs
