[package]
name = "stark101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-poly = "0.5.0"
rand = "0.9.0"
rs_merkle = "1.5.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2"

[[bin]]
name = "stark101"
path = "src/main.rs"
